@@ -2,6 +2,7 @@
 
 v2.2
 ----
+ - added a <credentials> element
  - added method instance.setColumns
  - HttpQueryTool now interpret dots in keys as parent key and subkey pair
  - fix: cache key calculation was not always right
